--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,7 @@ nav a:hover {
 .panel {
     position: fixed;
     inset: 0;
-    padding: 90px 18px 28px;
+    padding: 40px 18px;
     display: none;
     place-items: center;
     z-index: 4;
@@ -193,7 +193,7 @@ nav a:hover {
         rgba(7, 15, 36, 0.75),
         rgba(7, 15, 36, 0.9)
     );
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(14px);
 }
 .panel:target {
     display: grid;
@@ -379,7 +379,7 @@ footer {
 
     /* Panels */
     .panel {
-        padding: 70px 12px 16px;
+        padding: 40px 12px;
     }
     .panel article {
         padding: 18px 14px 14px;
